; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/apr-util/buckets/extr_apr_brigade.c_brigade_flush.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/apr-util/buckets/extr_apr_brigade.c_brigade_flush.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.brigade_vprintf_data_t = type { i64, %struct.TYPE_2__, i32, i32*, i32 }
%struct.TYPE_2__ = type { i64, i64 }

@APR_SUCCESS = common dso_local global i64 0, align 8
@APR_BUCKET_BUFF_SIZE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32*)* @brigade_flush to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @brigade_flush(i32* %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i32*, align 8
  %4 = alloca %struct.brigade_vprintf_data_t*, align 8
  %5 = alloca i64, align 8
  store i32* %0, i32** %3, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = bitcast i32* %6 to %struct.brigade_vprintf_data_t*
  store %struct.brigade_vprintf_data_t* %7, %struct.brigade_vprintf_data_t** %4, align 8
  %8 = load i64, i64* @APR_SUCCESS, align 8
  store i64 %8, i64* %5, align 8
  %9 = load %struct.brigade_vprintf_data_t*, %struct.brigade_vprintf_data_t** %4, align 8
  %10 = getelementptr inbounds %struct.brigade_vprintf_data_t, %struct.brigade_vprintf_data_t* %9, i32 0, i32 4
  %11 = load i32, i32* %10, align 8
  %12 = load %struct.brigade_vprintf_data_t*, %struct.brigade_vprintf_data_t** %4, align 8
  %13 = getelementptr inbounds %struct.brigade_vprintf_data_t, %struct.brigade_vprintf_data_t* %12, i32 0, i32 3
  %14 = load i32*, i32** %13, align 8
  %15 = load i32, i32* %14, align 4
  %16 = load %struct.brigade_vprintf_data_t*, %struct.brigade_vprintf_data_t** %4, align 8
  %17 = getelementptr inbounds %struct.brigade_vprintf_data_t, %struct.brigade_vprintf_data_t* %16, i32 0, i32 2
  %18 = load i32, i32* %17, align 8
  %19 = load %struct.brigade_vprintf_data_t*, %struct.brigade_vprintf_data_t** %4, align 8
  %20 = getelementptr inbounds %struct.brigade_vprintf_data_t, %struct.brigade_vprintf_data_t* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = load i64, i64* @APR_BUCKET_BUFF_SIZE, align 8
  %23 = call i64 @apr_brigade_write(i32 %11, i32 %15, i32 %18, i64 %21, i64 %22)
  store i64 %23, i64* %5, align 8
  %24 = load i64, i64* %5, align 8
  %25 = load i64, i64* @APR_SUCCESS, align 8
  %26 = icmp ne i64 %24, %25
  br i1 %26, label %27, label %28

27:                                               ; preds = %1
  store i64 -1, i64* %2, align 8
  br label %44

28:                                               ; preds = %1
  %29 = load %struct.brigade_vprintf_data_t*, %struct.brigade_vprintf_data_t** %4, align 8
  %30 = getelementptr inbounds %struct.brigade_vprintf_data_t, %struct.brigade_vprintf_data_t* %29, i32 0, i32 0
  %31 = load i64, i64* %30, align 8
  %32 = load %struct.brigade_vprintf_data_t*, %struct.brigade_vprintf_data_t** %4, align 8
  %33 = getelementptr inbounds %struct.brigade_vprintf_data_t, %struct.brigade_vprintf_data_t* %32, i32 0, i32 1
  %34 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %33, i32 0, i32 1
  store i64 %31, i64* %34, align 8
  %35 = load %struct.brigade_vprintf_data_t*, %struct.brigade_vprintf_data_t** %4, align 8
  %36 = getelementptr inbounds %struct.brigade_vprintf_data_t, %struct.brigade_vprintf_data_t* %35, i32 0, i32 0
  %37 = load i64, i64* %36, align 8
  %38 = load i64, i64* @APR_BUCKET_BUFF_SIZE, align 8
  %39 = add nsw i64 %37, %38
  %40 = load %struct.brigade_vprintf_data_t*, %struct.brigade_vprintf_data_t** %4, align 8
  %41 = getelementptr inbounds %struct.brigade_vprintf_data_t, %struct.brigade_vprintf_data_t* %40, i32 0, i32 1
  %42 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %41, i32 0, i32 0
  store i64 %39, i64* %42, align 8
  %43 = load i64, i64* %5, align 8
  store i64 %43, i64* %2, align 8
  br label %44

44:                                               ; preds = %28, %27
  %45 = load i64, i64* %2, align 8
  ret i64 %45
}

declare dso_local i64 @apr_brigade_write(i32, i32, i32, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
